--- a/index.html
+++ b/index.html
@@ -3,40 +3,82 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/382dfa8eb4.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./css/app.css">
     <title>Document</title>
 </head>
-<body class="debug">
+<body class="debu">
     <div id="app">
         <div class="container">
             <div class="contacts col-4">
-                <div class="my-number">
-                    Daniele Ardizzone
+                <div class="tool-bar flex-align-center justify-space-between">
+                    <div class="my-contact flex-align-center">
+                        <img src="./img/avatar_io.jpg">
+                        <span>Sofia</span>
+                    </div>
+                    <div class="tool-bar__icons flex-align-center">
+                        <i class="fa-solid fa-circle-notch"></i>
+                        <i class="fa-solid fa-message"></i>
+                        <i class="fa-solid fa-ellipsis-vertical"></i>
+                    </div>
                 </div>
                 <div class="search-bar">
                     Ricerca
                 </div>
                 <ul class="contacts__list flex-grow-1">
-                    <li class="contact">
-                        Mario Rossi
+                    <li class="contact flex-align-center">
+                        <div class="contact__img">
+                            <img src="./img/avatar_1.jpg" alt="">
+                        </div>
+                        <div class="contact__name">
+                            Mario Rossi
+                        </div>
                     </li>
-                    <li class="contact">
-                        Mario Rossi
+                    <li class="contact flex-align-center">
+                        <div class="contact__img">
+                            <img src="./img/avatar_1.jpg" alt="">
+                        </div>
+                        <div class="contact__name">
+                            Mario Rossi
+                        </div>
                     </li>
-                    <li class="contact">
-                        Mario Rossi
+                    <li class="contact flex-align-center">
+                        <div class="contact__img">
+                            <img src="./img/avatar_1.jpg" alt="">
+                        </div>
+                        <div class="contact__name">
+                            Mario Rossi
+                        </div>
                     </li>
-                    <li class="contact">
-                        Mario Rossi
+                    <li class="contact flex-align-center">
+                        <div class="contact__img">
+                            <img src="./img/avatar_1.jpg" alt="">
+                        </div>
+                        <div class="contact__name">
+                            Mario Rossi
+                        </div>
                     </li>
-                    <li class="contact">
-                        Mario Rossi
+                    <li class="contact flex-align-center">
+                        <div class="contact__img">
+                            <img src="./img/avatar_1.jpg" alt="">
+                        </div>
+                        <div class="contact__name">
+                            Mario Rossi
+                        </div>
                     </li>
                 </ul>
             </div>
             <div class="chat col-8">
-                <div class="selected-contact">
-                    Mario Rossi
+                <div class="chat__tool-bar flex-align-center justify-space-between">
+                    <div class="selected-contact flex-align-center">
+                        <img src="./img/avatar_1.jpg" alt="">
+                        <span>Mario Rossi</span>
+                    </div>
+                    <div class="chat__tool-bar__icons flex-align-center">
+                        <i class="fa-solid fa-circle-notch"></i>
+                        <i class="fa-solid fa-message"></i>
+                        <i class="fa-solid fa-ellipsis-vertical"></i>
+                    </div>
                 </div>
                 <div class="selected-chat flex-grow-1">
                     <div class="user-message">
