--- a/index.html
+++ b/index.html
@@ -36,12 +36,13 @@
                     </div>
                 </div>
                 <ul class="contacts__list flex-grow-1">
-                    <li class="contact flex-align-center">
+                    <li class="contact flex-align-center"
+                    v-for="(contact, index) in contacts" :key="index">
                         <div class="contact__img">
-                            <img src="./img/avatar_1.jpg" alt="">
+                            <img :src="contact.avatar" alt="">
                         </div>
                         <div class="contact__name">
-                            <h4>Mario Rossi</h4>
+                            <h4>{{ contact.name }}</h4>
                             <p>Lorem ipsum dolor sit amet.</p>
                         </div>
                     </li>
@@ -87,5 +88,8 @@
             </div>
         </div>
     </div>
+
+    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+    <script src="./js/app.js"></script>
 </body>
 </html>
